# drawio_llm_consumption

./: .gitignore  README.md  fixed_simple_bank_architecture.drawio  pyproject.toml  simple_bank_architecture_flawed_with_legend.drawio
drawio_arch_mcp/: __init__.py  __main__.py  analysis.py  cache.py  confluence_context.py  consistency.py  contextual_review.py  drawio_writer.py  graph_export.py  graph_mutation.py  hydration.py  mappings.py  models.py  parser.py  path_validation.py  repo_context.py  resources.py  review.py  server.py  stubs.py
drawio_arch_mcp/samples/: sample_architecture.drawio
drawio_arch_mcp/samples/mappings/: aliases.json  component_map.json
