[project]
name = "drawio-arch-mcp"
version = "0.2.0"
description = "Local-first MCP server: Draw.io diagrams → normalized graph, mutation, export, review"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
drawio-arch-mcp = "drawio_arch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
